# sport_data_solution

./: .gitignore  README.md  config.py  model_validation.py  notebook.ipynb  pyproject.toml  transform_for_pbi.py  validate_work_distance.py
data_processing/: distance_api.py  generate_historical_data.py  insert_to_postgres_historical_data.py  insert_to_postgres_rh_data.py  process_rh_data.py  retrieve_rh_data.py
postgres-db/: psql-version.txt  setup_postgres.sh
producer_consumer/: consumer_postgres.py  consumer_slack.py  producer_strava.py
redpanda/: docker-compose.redpanda.yaml
